# Noah

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  linux.sh  macos.sh  vs2019.bat  vs2022.bat  vs2026.bat
.github/workflows/: cmake-multi-platform.yml
Noah/: CMakeLists.txt  noah.cpp
NoahLib/: CMakeLists.txt  battleCursor.generated.h  bgfxGlue.cpp  bgfxGlue.h  imguiBGFX.cpp  imguiBGFX.h  isoManager.h  noahLib.cpp  noahLib.h
NoahLib/battle/: battle.cpp  battle.h  battleConfig.cpp  battleConfig.h  battleDebug.cpp  battleDebug.h  battleDebugSelector.cpp  battleDebugSelector.h  battleDialogWindow.cpp  battleDialogWindow.h  battleFader.cpp  battleFader.h  battleLoader.cpp  battleLoader.h  battleMechaLoadingTask.cpp  battleMechaLoadingTask.h  battleRenderContext.cpp  battleRenderContext.h  battleSpriteLoader.cpp  battleSpriteLoader.h  battleStartEffect.cpp  battleStartEffect.h  battleTerrain.cpp  battleTerrain.h  customPolyBuffer.cpp  customPolyBuffer.h  damageDisplay.cpp  damageDisplay.h  damageDisplay2.cpp  damageDisplay2.h  enemyScript.cpp  enemyScript.h  menu_chi.cpp  menu_chi.h  spinningEnemySelectionCursor.cpp  spinningEnemySelectionCursor.h
NoahLib/battle/battleEvent/: battleEvent.cpp  battleEvent.h
NoahLib/debug/: vram.cpp  vram.h
NoahLib/field/: compass.cpp  compass.h  dialogWindows.cpp  dialogWindows.h  field.cpp  field.h  fieldGraphicObject.cpp  fieldGraphicObject.h  fieldInputs.cpp  fieldInputs.h  fieldModel.cpp  fieldModel.h  fieldRandomBattles.cpp  fieldRandomBattles.h  fieldScriptSupport.cpp  fieldScriptSupport.h  opcodeTable.cpp  opcodeTables.h  opcodes.cpp  opcodes.h  screenDistortion.cpp  screenDistortion.h  walkMesh.cpp  walkMesh.h
NoahLib/field/fieldDebugger/: atelOpcodes.cpp  atelOpcodes.h  fieldDebugInfo.cpp  fieldDebugInfo.h  fieldDebugger.cpp  fieldDebugger.h  fieldInspector.cpp  fieldInspector.h  fieldModelInspector.cpp  fieldModelInspector.h  fieldNames.cpp  fieldNames.h  fieldViewDebug.cpp  fieldViewDebug.h
NoahLib/field/fieldInspector/: atelOpcodes.cpp  atelOpcodes.h  fieldInspector.cpp  fieldModelInspector.cpp  fieldModelInspector.h  fieldNames.cpp  fieldNames.h
NoahLib/field/mecha/: mechaOverlay.cpp  mechaOverlay.h
NoahLib/field/particles/: particles.cpp  particles.h
NoahLib/kernel/: 3dModel.cpp  3dModel.h  3dModel_bgfxRenderer.cpp  3dModel_bgfxRenderer.h  3dModel_psxRenderer.cpp  3dModel_psxRenderer.h  DTL.cpp  DTL.h  TIM.cpp  TIM.h  color.h  criticalSection.h  debugFont.h  debugText.cpp  debugText.h  decompress.cpp  decompress.h  events.cpp  events.h  filesystem.cpp  filesystem.h  font.cpp  font.h  gameMode.cpp  gameMode.h  gameState.cpp  gameState.h  graphics.cpp  graphics.h  gte.cpp  gte.h  inputs.cpp  inputs.h  isoManager.cpp  isoManager.h  kernelBootMenu.cpp  kernelBootMenu.h  kernelVariables.cpp  kernelVariables.h  logger.h  (+19 more)
NoahLib/kernel/audio/: pitchTable.cpp  pitchTable.h  seq.cpp  seq.h  seqOpcodes.cpp  seqOpcodes.h  soundInstance.cpp  soundInstance.h  soundSystem.cpp  soundSystem.h  spu.cpp  spu.h  wds.cpp  wds.h
NoahLib/kernel/audio/spuEmu/: spu.cpp  spu.h  spu_tables.cpp  spureverb.cpp
NoahLib/menus/: memoryCardMenu.cpp  memoryCardMenu.h  memoryCardTiles.cpp  memoryCardTiles.h  menuGold.cpp  menuGold.h  menuHandler.cpp  menuHandler.h  statusMenu.cpp  statusMenu.h
NoahLib/movie/: mdecDecoder.cpp  mdecDecoder.h  movie.cpp  movie.h  strPlayer.cpp  strPlayer.h
NoahLib/psx/: gpuprims.cpp  gpuprims.h  libapi.h  libetc.cpp  libetc.h  libgpu.cpp  libgpu.h  libgte.h
NoahLib/psx/libapi/: cache.cpp  cache.h  criticalSection.cpp
NoahLib/psx/libgte/: gte.cpp  gte.h
NoahLib/shaders/: PSXGeneric.varying.def.sc  PSXGeneric_ps.sc  PSXGeneric_vs.sc  SPRT.varying.def.sc  SPRT_ps.sc  SPRT_vs.sc  TILE.varying.def.sc  TILE_ps.sc  TILE_vs.sc  blit.varying.def.sc  blit_ps.sc  blit_vs.sc  embeddedShadersMacro.h  model3d.varying.def.sc  model3d_ps.sc  model3d_vs.sc  shaders.cpp  vertexColor.varying.def.sc  vertexColor_ps.sc  vertexColor_vs.sc
NoahLib/sprite/: spriteSetup.cpp  spriteSetup.h
NoahLib/validation/: gdbConnection.cpp  gdbConnection.h  interception.h  sharedmem.h  sharedmem_win32.cpp  socket.cpp  socket.h  validation.cpp  validation.h
NoahLib/validation/battle/: validateBattle.cpp  validateBattle.h
NoahLib/validation/field/: fieldInputsValidation.cpp  fieldInputsValidation.h  validateField.cpp  validateField.h  validateFieldEntities.cpp  validateFieldEntities.h
NoahLib/validation/kernel/: bootMenuValidation.cpp  bootMenuValidation.h  randomSeed.cpp  randomSeed.h  validateKernel.cpp  validateKernel.h
NoahLib/worldmap/: worldmap.cpp  worldmap.h  worldmapDynamicCollisions.cpp  worldmapDynamicCollisions.h  worldmapExit.cpp  worldmapExit.h  worldmapFollowLeader.cpp  worldmapFollowLeader.h  worldmapMinimap.cpp  worldmapMinimap.h  worldmapParticles.cpp  worldmapParticles.h  worldmapPartyGear.cpp  worldmapPartyGear.h  worldmapPartyMember.cpp  worldmapPartyMember.h  worldmapPlayer.cpp  worldmapPlayer.h  worldmapPlayerGear.cpp  worldmapPlayerGear.h  worldmapTask.cpp  worldmapTask.h  worldmapTaskCamera.cpp  worldmapTaskCamera.h  worldmapTaskFader.cpp  worldmapTaskFader.h  worldmapTaskGround.cpp  worldmapTaskGround.h  worldmapTaskWorldCamera.cpp  worldmapTaskWorldCamera.h  worldmapTaskYggdrasil.cpp  worldmapTaskYggdrasil.h  worldmapWorldStreaming.cpp  worldmapWorldStreaming.h
bin2c/: CMakeLists.txt  bin2c.cpp
data/: debugFont.cpp  imgui.ini
data/debuginfo/: field.xml  filesystem.xml
